--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "steam-discord-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "ts-node dist/index.ts",
-    "dev": "ts-node-dev src/index.ts",
-    "build": "tsc"
+    "start": "node .",
+    "dev": "tsx watch --clear-screen=true src/index.ts",
+    "build": "tsc",
+    "deploy-commands": "npm run build && node deploy-commands"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +20,7 @@
   "devDependencies": {
     "@types/glob": "^8.1.0",
     "@types/node": "^22.13.4",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   }
 }
