--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "glob": "^11.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@types/glob": "^8.1.0",
     "@types/node": "^22.13.4",
+    "eslint": "^9.20.1",
+    "globals": "^16.0.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1"
   }
 }
