--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "glob": "^11.0.1",
+    "open": "^10.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
