--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.4.7",
     "glob": "^11.0.1",
     "open": "^10.1.0",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
